--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -198,64 +198,13 @@
                     </div>
                 </div>
             </div>
-
-{#            <div class="row home-page-block description active" data-id="0">#}
-{#                <div class="col-xs-12 col-sm-8">#}
-{#                    <div class="description-container">#}
-{#                        <span class="step-description">Collect your data using the same methods you use now. HydroShare supports a broad set of hydrologic data types.</span>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="col-xs-12 col-sm-4">#}
-{#                    <div style="background-image: url('{{ STATIC_URL }}img/home-page/step1.jpg');"#}
-{#                         class="round-image img-step">#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{##}
-{#            <div class="row home-page-block description" data-id="1">#}
-{#                <div class="col-xs-12 col-sm-8">#}
-{#                    <div class="description-container">#}
-{#                        <span class="step-description">Upload your data files to HydroShare through the web user interface. HydroShare will automatically extract as much metadata as it can from the files you upload.</span>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="col-xs-12 col-sm-4">#}
-{#                    <img class="img-responsive img-home-art" src="{{ STATIC_URL }}img/home-page/step2.png"#}
-{#                         alt="Create data">#}
-{##}
-{#                </div>#}
-{#            </div>#}
-{##}
-{#            <div class="row home-page-block description" data-id="2">#}
-{#                <div class="col-xs-12 col-sm-8">#}
-{#                    <div class="description-container">#}
-{#                        <span class="step-description">Use HydroShare's simple metadata entry forms to finish describing your data so that your colleagues can find, access, and interpret it.</span>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="col-xs-12 col-sm-4">#}
-{#                    <img class="img-responsive img-home-art" src="{{ STATIC_URL }}img/home-page/step3.png"#}
-{#                         alt="Create data">#}
-{#                </div>#}
-{#            </div>#}
-
-{#            <div class="row home-page-block description" data-id="3">#}
-{#                <div class="col-xs-12 col-sm-8">#}
-{#                    <div class="description-container">#}
-{#                        <span class="step-description">You choose who has access to the data and models you have uploaded to HydroShare. You can share with individual users or publish your resources for everyone to access.</span>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="col-xs-12 col-sm-4">#}
-{#                    <img class="img-responsive img-home-art" src="{{ STATIC_URL }}img/home-page/step4.png"#}
-{#                         alt="Create data">#}
-{#                </div>#}
-{#            </div>#}
         </div>
 
         <div class="screen-sizes">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-6">
-                        {#                    Image credit: Android Design. Used under Creative Commons license.#}
-                        {#                    http://developer.android.com/design/style/devices-displays.html#}
+                        {# Image credit: Android Design. Used under Creative Commons license. http://developer.android.com/design/style/devices-displays.html #}
                         <img class="img-home-art img-responsive" src="{{ STATIC_URL }}img/da_devices.png"
                              alt="Screen sizes">
                     </div>
