--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -27,7 +27,7 @@
                     <h1><strong>Discover</strong></h1>
                     <h4>Discover content shared by your colleagues and other users. Access a broad range of resource types used in hydrology.</h4>
                 </div>
-                <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/carousel/bg5.jpg" alt="Image 2">
+                <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/carousel/bg3.JPG" alt="Image 2">
             </div>
 
             <div class="item">
@@ -36,7 +36,7 @@
                     <h1><strong>Collaborate</strong></h1>
                     <h4>Upload your data or models and share them with other users. You control who has access.</h4>
                 </div>
-                <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/carousel/bg2.jpg" alt="Image 3">
+                <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/carousel/bg2.JPG" alt="Image 3">
             </div>
         </div>
 
