File ref name change

--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -27,7 +27,7 @@
                     <h1><strong>Discover</strong></h1>
                     <h4>Discover content shared by your colleagues and other users. Access a broad range of resource types used in hydrology.</h4>
                 </div>
-                <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/carousel/bg3.JPG" alt="Image 2">
+                <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/carousel/bg3.jpg" alt="Image 2">
             </div>
 
             <div class="item">
