--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -155,6 +155,13 @@ h1.hl small, h2.hl small, h3.hl small, h4.hl small, h5.hl small, h6.hl small {
     width: 60%;
 }
 
+#recaptcha-div {
+    margin-bottom: 0.5em;
+    background: white;
+    border-radius: 4px;
+    border: 1px solid;
+}
+
 /* ===== Showcase ===== */
 
 #wrap {
@@ -3135,7 +3142,6 @@ span.carousel-control-icon {
 }
 
 .step-number {
-    position: absolute;
     border: 1px solid #A9A9A9;
     width: 30px;
     height: 30px;
@@ -3143,8 +3149,8 @@ span.carousel-control-icon {
     border-radius: 50%;
     padding-top: 4px;
     color: #000;
-    left: 6px;
-    top: 50px;
+    margin: auto;
+    margin-top: -25px;
 }
 
 .home-page-block {
@@ -3181,3 +3187,4 @@ div.description.active {
     height: 150px;
     margin: auto;
 }
+
