--- a/theme/templates/accounts/account_signup.html
+++ b/theme/templates/accounts/account_signup.html
@@ -6,7 +6,7 @@
 {% if request.user.is_authenticated %}
     <p>{% trans "You're already logged in. If you'd like to create a new account, you'll need to log out first." %}</p>
 {% else %}
-    {% include "accounts/sign-up.html" %}
+    {% include "accounts/sign_up_form.html" %}
     {% if settings.ACCOUNTS_APPROVAL_REQUIRED %}
     <p>{% trans "After signing up, your account will be reviewed for approval. You'll receive an email when your account is activated." %}</p>
     {% elif settings.ACCOUNTS_VERIFICATION_REQUIRED %}
