--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -12,31 +12,33 @@
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <div class="gray-screen"></div>
-                <div class="item-caption">
-                    <h1><strong>Share your data and models with colleagues</strong></h1>
-                    <h4>Upload, share, and access a broad set of hydrologic data types and models. Manage who has access to the content that you share.</h4>
+            <div class="item active" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg1.jpg)">
+                <div class="caption-wrapper">
+                    <div class="item-caption">
+                        <h1><strong>Share your data and models with colleagues</strong></h1>
+                        <h4>Upload, share, and access a broad set of hydrologic data types and models. Manage who has
+                            access to the content that you share.</h4>
+                    </div>
                 </div>
-                <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/carousel/bg1.jpg" alt="Image 1">
             </div>
 
-            <div class="item">
-                <div class="gray-screen"></div>
-                <div class="item-caption">
-                    <h1><strong>Discover</strong></h1>
-                    <h4>Discover content shared by your colleagues and other users. Access a broad range of resource types used in hydrology.</h4>
+            <div class="item" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg3.jpg)">
+                <div class="caption-wrapper">
+                    <div class="item-caption">
+                        <h1><strong>Discover</strong></h1>
+                        <h4>Discover content shared by your colleagues and other users. Access a broad range of resource
+                            types used in hydrology.</h4>
+                    </div>
                 </div>
-                <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/carousel/bg3.jpg" alt="Image 2">
             </div>
 
-            <div class="item">
-                <div class="gray-screen"></div>
-                <div class="item-caption">
-                    <h1><strong>Collaborate</strong></h1>
-                    <h4>Upload your data or models and share them with other users. You control who has access.</h4>
+            <div class="item" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg2.jpg)">
+                <div class="caption-wrapper">
+                    <div class="item-caption">
+                        <h1><strong>Collaborate</strong></h1>
+                        <h4>Upload your data or models and share them with other users. You control who has access.</h4>
+                    </div>
                 </div>
-                <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/carousel/bg2.JPG" alt="Image 3">
             </div>
         </div>
 
