--- a/theme/templates/accounts/sign_up_form.html
+++ b/theme/templates/accounts/sign_up_form.html
@@ -28,7 +28,7 @@
 
       <div id="recaptcha-div"></div>
 
-      <input class="hl-btn hl-btn-green btn-block" type="button" id="signup" value="Join HydroShare & start collaborating.">
+      <input class="btn btn-primary" type="button" id="signup" value="Join HydroShare & start collaborating">
   </div>
 </form>
 
