--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
 
-            <div class="item" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg2.jpg)">
+            <div class="item" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg2.JPG)">
                 <div class="caption-wrapper">
                     <div class="item-caption">
                         <h1><strong>Collaborate</strong></h1>
