--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -92,8 +92,8 @@
     <div>
         <div class="container home-page-block">
             <div class="row">
+                <div class="col-sm-12"><h2 class="home-page-block-title">What you can do with HydroShare</h2></div>
                 <div class="col-xs-12 col-sm-7 slideInBlock">
-                    <h2 class="home-page-block-title">What you can do with HydroShare</h2>
                     <ul class="list-features">
                         <li>
                             <div class="glyphicon glyphicon-ok checkmark"></div>
@@ -112,6 +112,14 @@
                             <div class="glyphicon glyphicon-ok checkmark"></div>
                             <span>Publish data and models to meet the requirements of your data management plan</span>
                         </li>
+                        <li>
+                            <div class="glyphicon glyphicon-ok checkmark"></div>
+                            <span>Discover and access data and models published by others</span>
+                        </li>
+                        <li>
+                            <div class="glyphicon glyphicon-ok checkmark"></div>
+                            <span>Use web apps to visualize, analyze and run models on data in HydroShare</span>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-xs-12- col-sm-5 slideInBlock">
@@ -129,8 +137,8 @@
                         <div class="step-item">
                             <div class="step-number">1</div>
                             <h4>Create data</h4>
-                            <div class="description-container">
-                                <span class="step-description">Collect your data using the same methods you use now. HydroShare supports a broad set of hydrologic data types.</span>
+                            <div class="description-container table-display">
+                                <span class="step-description table-cell-display">Collect your data using the same methods you use now. HydroShare supports a broad set of hydrologic data types.</span>
                             </div>
                             <div>
                                 <img class="img-responsive img-step" src="{{ STATIC_URL }}img/home-page/step1.png"
@@ -143,8 +151,8 @@
                         <div class="step-item">
                             <div class="step-number">2</div>
                             <h4>Upload to HydroShare</h4>
-                            <div class="description-container">
-                                <span class="step-description">Upload your data files to HydroShare through the web user interface. HydroShare will automatically extract as much metadata as it can from the files you upload.</span>
+                            <div class="description-container table-display">
+                                <span class="step-description table-cell-display">Upload your data files to HydroShare through the web user interface. HydroShare will automatically extract as much metadata as it can from the files you upload.</span>
                             </div>
                             <div>
                                 <img class="img-responsive img-step" src="{{ STATIC_URL }}img/home-page/step2.png"
@@ -158,8 +166,8 @@
                         <div class="step-item">
                             <div class="step-number">3</div>
                             <h4>Describe with metadata</h4>
-                            <div class="description-container">
-                                <span class="step-description">Use HydroShare's simple metadata entry forms to finish describing your data so that your colleagues can find, access, and interpret it.</span>
+                            <div class="description-container table-display">
+                                <span class="step-description table-cell-display">Use HydroShare's simple metadata entry forms to finish describing your data so that your colleagues can find, access, and interpret it.</span>
                             </div>
                             <div>
                                 <img class="img-responsive img-step" src="{{ STATIC_URL }}img/home-page/step3.png"
@@ -172,8 +180,8 @@
                         <div class="step-item">
                             <div class="step-number">4</div>
                             <h4>Share with colleagues</h4>
-                            <div class="description-container">
-                                <span class="step-description">You choose who has access to the data and models you have uploaded to HydroShare. You can share with individual users or publish your resources for everyone to access.</span>
+                            <div class="description-container table-display">
+                                <span class="step-description table-cell-display">You choose who has access to the data and models you have uploaded to HydroShare. You can share with individual users or publish your resources for everyone to access.</span>
                             </div>
                             <div>
                                 <img class="img-responsive img-step" src="{{ STATIC_URL }}img/home-page/step4.png"
@@ -193,8 +201,10 @@
                         <img class="img-home-art img-responsive" src="{{ STATIC_URL }}img/da_devices.png"
                              alt="Screen sizes">
                     </div>
-                    <div class="col-xs-12 col-sm-6">
-                        <h2>Available in all your devices</h2>
+                    <div class="col-xs-12 col-sm-6 ">
+                        <div class="table-display">
+                            <h2 class="table-cell-display availability-description">Available in all your devices</h2>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -202,6 +212,11 @@
     </div>
 
     <script>
+        // Disable carousel auto slide
+        $('.carousel').carousel({
+            interval: 12000
+        });
+
         $.fn.visible = function (partial) {
             var $t = $(this),
                     $w = $(window),
@@ -213,7 +228,6 @@
                     compareBottom = partial === true ? _top : _bottom;
 
             return ((compareBottom <= viewBottom) && (compareTop >= viewTop));
-
         };
 
         $(document).ready(function () {
