Updated navbar layout for error pages.

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -963,14 +963,14 @@
                 <div class="panel-tabs">
                     <ul class="nav nav-tabs">
                         <li class="active col-xs-2 col-md-2">
-                            <a href="#contactTab" data-toggle="tab">
+                            <a href="#contactTab" data-toggle="tab" title="Contact">
                                 <span class="glyphicon glyphicon-user"> </span>
                                 &nbspContact
                             </a>
                         </li>
                         {% if spatial_coverage.north or spatial_coverage.northlimit or temporal_coverage or metadata_form %}
                             <li class="col-xs-2 col-md-2">
-                                <a id="coverageTabBtn" href="#coverageTab" data-toggle="tab">
+                                <a id="coverageTabBtn" href="#coverageTab" data-toggle="tab" title="Coverage">
                                     <span class="glyphicon glyphicon-globe"></span>
                                     &nbspCoverage
                                 </a>
@@ -978,7 +978,7 @@
                         {% endif %}
                         {% if sources or relations or metadata_form %}
                             <li class="col-xs-2 col-md-2">
-                                <a href="#relatedResourcesTab" data-toggle="tab">
+                                <a href="#relatedResourcesTab" data-toggle="tab" title="Related resources">
                                     <span class="glyphicon glyphicon-book"></span>
                                     &nbspRelated Resources
                                 </a>
@@ -989,7 +989,7 @@
                             {% if cm|resource_type != "HIS Referenced Time Series" or not metadata_form %}
                                 {% if  cm|resource_type != "Generic" %}
                                     <li class="col-xs-2 col-md-2">
-                                        <a href="#resourceSpecificTab" data-toggle="tab">
+                                        <a href="#resourceSpecificTab" data-toggle="tab" title="Resource specific">
                                             <span class="glyphicon glyphicon-folder-close"></span>
                                             &nbspResource Specific
                                         </a>
@@ -999,7 +999,7 @@
                         {% endif %}
                         {% if relevant_tools  %}
                             <li class="col-xs-2 col-md-2">
-                                <a href="#relevantTools" data-toggle="tab">
+                                <a href="#relevantTools" data-toggle="tab" title="Relevant tools">
                                     <span class="glyphicon glyphicon-wrench"></span>
                                     &nbsp; Web Apps
                                 </a>
