--- a/hs_core/templates/503.html
+++ b/hs_core/templates/503.html
@@ -90,7 +90,7 @@
                 <ul class="nav navbar-nav navbar-right hidden-xs">
                     {% ifinstalled mezzanine.accounts %}
                     {% if request.user.is_authenticated %}
-                    <li id="profile-menu" class="display-block">
+                        <li id="profile-menu" class="display-block">
                             {% if request.user.userprofile.picture and request.user.userprofile.picture.url %}
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
@@ -104,21 +104,24 @@
                             {% endif %}
                             <ul class="dropdown-menu arrow_box">
                                 <li class="account">
-                                    {% if request.user.userprofile.picture and request.user.userprofile.picture.url %}
-                                        <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
-                                             class="round-image dropdown-profile-pic-thumbnail pull-left">
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            {% if request.user.userprofile.picture and request.user.userprofile.picture.url %}
+                                                <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
+                                                     class="round-image dropdown-profile-pic-thumbnail pull-left">
+                                                </div>
+                                            {% else %}
+                                                <div class="dropdown-profile-pic-thumbnail round-image dropdown-user-icon pull-left"></div>
+                                            {% endif %}
                                         </div>
-                                    {% else %}
-                                        <div class="dropdown-profile-pic-thumbnail round-image dropdown-user-icon pull-left"></div>
-                                    {% endif %}
-
-                                    <div>
-                                        <strong>{{ request.user }}</strong>
+                                        <div class="col-sm-8">
+                                            <div><strong>{{ request.user }}</strong></div>
+                                            {% if request.user.email %}
+                                                <div class="text-muted">{{ request.user.email }}</div>
+                                            {% endif %}
+                                        </div>
                                     </div>
 
-                                    {% if request.user.email %}
-                                        <div class="text-muted">{{ request.user.email }}</div>
-                                    {% endif %}
 
                                     <div class="dropdown-footer">
                                         <a href="/user/{{ user.id }}/" class="btn btn-primary">Profile</a>
@@ -129,8 +132,8 @@
                             </ul>
                         </li>
                     {% else %}
-                    <li id="signup-menu"><a href="{% url 'signup' %}">Sign Up</a></li>
-                    <li id="signin-menu"><a href="{% url 'login' %}">Sign In</a></li>
+                    <!-- <li id="signup-menu"><a href="{% url 'signup' %}">Sign Up</a></li> -->
+                    <li id="signin-menu"><a href="{% url 'login' %}"><span class="glyphicon glyphicon-log-in"></span> Sign In</a></li>
                     {% endif %}
                     {% endifinstalled %}
                     {% comment %}
